# matterbak

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  channels.json  matterbak.py  pyproject.toml
.github/workflows/: pre-commit.yml
src/matterbak/: __init__.py  channeldata.py  dump.py  hashablematterdata.py  ignoresignals.py  matterbak.py  mattermerge.py  mattermostapi.py  teams.py  users.py
src/matterexport/: dataaccessor.py  exporter.py  hgf.py  markdown.py  matterexport.py
