[project]
name = "matterbak"
description = "Backing up mattermost channels (including files) and users"
version = "0.3.1"
requires-python = ">= 3.8"
dependencies = [
    # We extended the mattermost package so we enforce a specific minor version
    "mattermost==10.11.*",
]
readme = "README.md"
authors = [
    { name="Michael Behrisch", email="oss@behrisch.de" },
    { name="Björn Hendriks", email="bjoern.hendriks@dlr.de" },
    { name="Daniel Mohr", email="daniel.mohr@dlr.de" },
]


[project.scripts]
matterbak = "matterbak.matterbak:main"


[build-system]
requires = [ "setuptools>=42" ]
build-backend = "setuptools.build_meta"


[tool.pylint.'MAIN']
# ignores E0401: Unable to import 'mattermost' (import-error)
# allows to run in pre stage in ci pipelines (github action)
ignored-modules = "mattermost"
