[project]
name = "matterbak"
description = "Backing up mattermost channels (including files) and users"
version = "0.4.0"
requires-python = ">= 3.8"
dependencies = [
    # We extended the mattermost package so we enforce a specific minor version
    "mattermost==10.11.*",
]
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
    { name="Michael Behrisch", email="oss@behrisch.de" },
    { name="Björn Hendriks", email="bjoern.hendriks@dlr.de" },
    { name="Daniel Mohr", email="daniel.mohr@dlr.de" },
]
maintainers = [
    { name="Björn Hendriks", email="bjoern.hendriks@dlr.de" },
]
keywords = [ "mattermost", "backup", "tool", "chat" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Topic :: Communications :: Chat",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
]


[project.urls]
Repository = "https://github.com/bjhend/matterbak"
Issues = "https://github.com/bjhend/matterbak/issues"
Changelog = "https://github.com/bjhend/matterbak/blob/main/CHANGELOG.md"


[project.scripts]
matterbak = "matterbak.matterbak:main"


[build-system]
requires = [ "setuptools>=42" ]
build-backend = "setuptools.build_meta"


[tool.pylint.'MAIN']
# ignores E0401: Unable to import 'mattermost' (import-error)
# allows to run in pre stage in ci pipelines (github action)
ignored-modules = "mattermost"
